[package]
name = "pixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
rpixel = ["extendr-api"]
# use_polars = ["polars"]

[dependencies]
pixel_proc = { path = "./pixel_proc" }
extendr-api = { optional = true, version = "*" }

rand = '*'
rand_distr = '*'

nom = "*"
num-traits = "*"
num-derive = "*"

anyhow = "*"
serde = "*"
serde_yaml = "*" # yaml-rust = "0.4.5"

regex = "1.7.1"

# str-concat = "0.2.0"
polars = { version = "0.27.2", features = ["diagonal_concat", "horizontal_concat"] }
# polars = { optional = true, version = "0.27.2", features = ["parquet", "lazy", "diagonal_concat", "horizontal_concat"] }

